# network-diagnostics-agent

./: CLAUDE.md  LICENSE  README.md  claude-code-help.md  config.toml  config_example.toml  netdiag.db  pyproject.toml
.github/workflows/: ci.yml
src/netdiag/: __main__.py  cli.py  config.py  database.py  presentation.py
src/netdiag/analysis/: ping.py
src/netdiag/config/: config.py  default.py  loader.py  test.py
src/netdiag/data/: ping.py
src/netdiag/os/: __init__.py  base.py  unix_base.py  windows.py
src/netdiag/probes/: __init__.py  ping.py
tests/: README.md  __init__.py  conftest.py  test_cli.py
tests/analysis/: __init__.py  test_ping.py
tests/cli/: test_cli.py
tests/data/: __init__.py  test_ping.py
tests/fixtures/: ping_samples.py
tests/probes/: __init__.py  test_ping.py  test_ping_crossplatform.py
