[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netdiag"
version = "0.1.0"
description = "Local-first network diagnostics and observability tool"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
netdiag = "netdiag.cli:main"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]