[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netdiag"
version = "0.1.0"
description = "Local-first network diagnostics and observability tool"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
netdiag = "netdiag.cli:main"

[project.optional-dependencies]
dev = ["ruff", "pytest", "platformdirs"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests that run real commands (slower)",
    "slow: slow running tests",
    "network: tests requiring network access",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]